tests/out/error/redef/static.in.bt
static my_var := true
static my_var := 3.14
