tests/out/error/redef/static.out
tests/out/error/redef/static.in.bt:3:1 error: redefinition of my_var
